# Equilibria-Protocol

./: README.md  connection.py  hack.md
contracts/amm_pool/: Cargo.toml  lib.rs
contracts/opportunity_registry/: Cargo.toml  lib.rs
contracts/price_oracle/: Cargo.toml  lib.rs
contracts/rebalancing_vault/: Cargo.toml  lib.rs
contracts/stability_pool/: Cargo.toml  lib.rs
frontend/: .gitignore  index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Sidebar.jsx
frontend/src/data/: mockData.js
frontend/src/pages/: AITerminal.jsx  Analytics.jsx  Dashboard.jsx  OpportunityFeed.jsx  StabilityPool.jsx
frontend/src/styles/: analytics.css  base.css  components.css  dashboard.css  opportunity.css  pool.css  terminal.css  variables.css
keeper/: keeper.py  requirements.txt  server.py
scripts/: deploy.py
