#use this cargo.toml for each new contact

[package]
name = "amm_pool"          # change to: amm_pool OR rebalancing_vault
version = "0.1.0"
authors = ["Equilibria Protocol"]
edition = "2021"

[dependencies]
ink_primitives = { version = "=3.4.0", default-features = false }
ink_metadata   = { version = "=3.4.0", default-features = false, features = ["derive"] }
ink_env        = { version = "=3.4.0", default-features = false }
ink_storage    = { version = "=3.4.0", default-features = false }
ink_lang       = { version = "=3.4.0", default-features = false }
scale          = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info     = { version = "2.3", default-features = false, features = ["derive"] }

[lib]
name      = "amm_pool"     # change to match package name
path      = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_metadata/derive",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []