[package]
name = "opportunity_registry"
version = "0.1.0"
authors = ["OpenAI"]
edition = "2021"
publish = false

[dependencies]
ink_lang = { version = "3.4.0", default-features = false }
ink_storage = { version = "3.4.0", default-features = false }
ink_prelude = { version = "3.4.0", default-features = false }
parity-scale-codec = { version = "2", default-features = false, features = ["derive"] }
scale-info = { version = "1", default-features = false, features = ["derive"], optional = true }

[lib]
name = "opportunity_registry"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "ink_lang/std",
    "ink_storage/std",
    "ink_prelude/std",
    "parity-scale-codec/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []
